@@ -66,6 +66,7 @@ from Products.ATContentTypes.lib.browserdefault import BrowserDefaultMixin
 from Products.ATContentTypes import permission as ATCTPermissions
 from Products.Archetypes.debug import _default_logger
 from Products.Archetypes.debug import _zlogger
+from Products.Archetypes.utils import shasattr
 from Products.Archetypes.public import log_exc
 from Products.CMFPlone import base_hasattr
 
@@ -203,12 +204,43 @@ class ATCTMixin(BrowserDefaultMixin):
             if kwargs:
                 self.edit(**kwargs)
             self._signature = self.Schema().signature()
+            self.markCreationFlag()
         except Exception, msg:
             _zlogger.log_exc()
             if DEBUG and str(msg) not in ('SESSION',):
                 # debug code
                 raise
                 #_default_logger.log_exc()
+
+    security.declareProtected(CMFCorePermissions.ModifyPortalContent, 'markCreationFlag')
+    def markCreationFlag(self):
+        """Sets flag on the instance to indicate that the object hasn't been
+        saved properly (unset in content_edit); this will only be done if a REQUEST is
+        present to ensure that objects created programmatically are considered fully created.
+        """
+        if shasattr(self, 'REQUEST'):
+            self._at_creation_flag = True
+
+    security.declareProtected(CMFCorePermissions.ModifyPortalContent, 'unmarkCreationFlag')
+    def unmarkCreationFlag(self):
+        """Remove creation flag
+        """
+        if shasattr(aq_inner(self), '_at_creation_flag'):
+            self._at_creation_flag = False
+        post_create = getattr(self, 'at_post_create_script', False)
+        if post_create:
+            try:
+                post_create()
+            except TypeError:
+                log("unmarkCreationFlag: at_post_create_script not callable")
+                pass
+
+    security.declareProtected(CMFCorePermissions.ModifyPortalContent, 'checkCreationFlag')
+    def checkCreationFlag(self):
+        """returns True if the object has been fully saved, False otherwise
+        """
+        return getattr(aq_inner(self), '_at_creation_flag', False)
+
 
     security.declareProtected(CMFCorePermissions.ModifyPortalContent, 'edit')
     def edit(self, *args, **kwargs):
@@ -287,6 +319,24 @@ class ATCTMixin(BrowserDefaultMixin):
                     break
             return '%.1f %s' % (float(size/float(const[c])), c)
         return size
+
+    def processForm(self, data=1, metadata=0, REQUEST=None, values=None):
+        """Process the schema looking for data in the form, replace autogenerated id with name derived from object title."""
+        new_object = self.checkCreationFlag()
+
+        self._processForm(data=data, metadata=metadata,
+                          REQUEST=REQUEST, values=values)
+        # the following line should perhaps be moved AT/acripts/artcheypes/validate_integrity/py so
+        # that the creation flag is unset only when the object is fully verified
+        self.unmarkCreationFlag()
+
+        # the following should be placed in BaseObject._processForm() so that types that wish to
+        # override processForm will get this behavior automatically.
+        plone_tool = getToolByName(self, 'plone_utils')
+        title = self.Title()
+        new_id = plone_tool.titleToNormalizedId(self.Title())
+        if title and new_object and self.isIDAutoGenerated():
+            self.setId(new_id)
 
 InitializeClass(ATCTMixin)
 
