@@ -1,0 +1,46 @@
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:tal="http://xml.zope.org/namespaces/tal"
+      xmlns:metal="http://xml.zope.org/namespaces/metal"
+      xmlns:i18n="http://xml.zope.org/namespaces/i18n"
+      i18n:domain="plone">
+  <head><title></title></head>
+  <body>
+
+    <!-- Id/NameWidgets  - only works for 'id' -->
+
+    <metal:view_macro define-macro="view"
+		      tal:define="site_visible_ids python:here.portal_properties.site_properties.getProperty('visible_ids', None);
+         global visible_ids visible_ids;
+		      visible_ids visible_ids|site_visible_ids;"
+		      tal:condition="visible_ids"
+		      tal:replace="structure accessor" />
+
+    <metal:define define-macro="edit">
+      <tal:block tal:define="visible_ids python:here.portal_properties.site_properties.getProperty('visible_ids', None);
+		 global visible_ids visible_ids|site_visible_ids;"
+		 tal:condition="visible_ids">
+	<metal:use use-macro="field_macro | here/widgets/field/macros/edit">
+	  <input metal:fill-slot="widget_body"
+		 type="text"
+		 name=""
+		 value=""
+		 size="30"
+		 tabindex="#"
+		 tal:attributes="name fieldName;
+		 value python:(here.show_id() or not here.isIDAutoGenerated(value)) and value or '';
+		 tabindex tabindex/next;"
+		 />
+	</metal:use>
+      </tal:block>
+      <tal:block tal:condition="python:not visible_ids">
+	<input type="hidden"
+	       name="id"
+	       tal:attributes="value python:request.get('id', here.getId())"
+	       />
+      </tal:block>
+
+    </metal:define>
+  </body>
+
+</html>
+
